update algorithm output

--- a/others/Algorithm Output.ipynb
+++ b/others/Algorithm Output.ipynb
@@ -257,13 +257,13 @@
     "\n",
     "Consider the graph below:\n",
     "![Dijkstra](https://i.imgur.com/tiFCgu2.png)\n",
-    "The shortest path from A to F is A -> B -> C -> F, this gives a total of 11 in length.\n",
+    "The shortest path from A to F is A -> B -> D -> F, this gives a total of 11 in length.\n",
     "Dijkstra's algorithm is implemented below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,6 @@
     "        self.name = name\n",
     "        self.nodes = nodes\n",
     "        self.distance = float('inf')\n",
-    "        self.seen = False\n",
     "        self.completed = False\n",
     "\n",
     "    def __lt__(self, other):\n",
@@ -294,22 +293,20 @@
     "\n",
     "def dijkstra(source, end, graph):\n",
     "    queue = [graph[source]]\n",
-    "    queue[0].seen, queue[0].distance = True, 0\n",
+    "    queue[0].distance = 0\n",
     "\n",
-    "    while len(queue) > 0:\n",
+    "    while queue:\n",
     "        current = queue.pop(0)\n",
     "        if current.name == end:\n",
     "            return current.distance\n",
     "        current.completed = True\n",
     "\n",
-    "        for j in current.nodes:\n",
-    "            vertex = graph[j['name']]\n",
+    "        for edge in current.nodes:\n",
+    "            vertex = graph[edge['name']]\n",
     "            if not vertex.completed:\n",
-    "                distance = current.distance + j['size']\n",
+    "                distance = current.distance + edge['size']\n",
     "                if distance < vertex.distance:\n",
     "                    vertex.distance = distance\n",
-    "                    if vertex.seen:\n",
-    "                        queue.pop(bisect.bisect(queue, vertex))\n",
     "                    bisect.insort(queue, vertex)\n",
     "    return -1\n",
     "\n",
