--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,57 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(arr):\n",
-    "    mx = -float('inf')\n",
-    "    current = 0\n",
-    "    for i in arr:\n",
-    "        current = i if current + i < i else current + i\n",
-    "        mx = max(mx, current)\n",
-    "    return mx"
+    "from itertools import combinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "20"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution([3, 2, -6, 4, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-2"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solution([-3, -2, -6, -4])"
+    "len(list(combinations([1,2,3,4,5,6], 3)))"
    ]
   },
   {
