--- a/Codility/Codility-py/07-Stacks-and-Queues/Nesting.ipynb
+++ b/Codility/Codility-py/07-Stacks-and-Queues/Nesting.ipynb
@@ -2,57 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(arr):\n",
-    "    mx = -float('inf')\n",
-    "    current = 0\n",
-    "    for i in arr:\n",
-    "        current = i if current + i < i else current + i\n",
-    "        mx = max(mx, current)\n",
-    "    return mx"
+    "    brackets = {'(': ')'}\n",
+    "    stk = []\n",
+    "    for b in arr:\n",
+    "        if b == '(':\n",
+    "            stk.append(b)\n",
+    "        elif not stk or b != brackets[stk.pop()]:\n",
+    "            return 0\n",
+    "    return 0 if stk else 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution([3, 2, -6, 4, 0])"
+    "solution('(()(())())')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2"
+       "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution([-3, -2, -6, -4])"
+    "solution('())')"
    ]
   },
   {
