add javascript solutions and more hackerrank problems

--- a/Hackerrank/algorithms - practice/Strings/Two Strings.ipynb
+++ b/Hackerrank/algorithms - practice/Strings/Two Strings.ipynb
@@ -2,31 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 'adsfs'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['adsfs']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
     }
    ],
    "source": [
-    "a.split('z')"
+    "a, b = 'hi', 'world'\n",
+    "a, b = set(a), set(b)\n",
+    "print('YES' if len(a - b) != len(a) else 'NO')"
    ]
   },
   {
