--- a/Hackerrank/python-track/Maths.ipynb
+++ b/Hackerrank/python-track/Maths.ipynb
@@ -506,11 +506,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Points(object):\n",
+    "    def __init__(self, x, y, z):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.z = z\n",
+    "\n",
+    "    def __sub__(self, no):\n",
+    "\n",
+    "    def dot(self, no):\n",
+    "\n",
+    "    def cross(self, no):\n",
+    "        \n",
+    "    def absolute(self):\n",
+    "        return pow((self.x ** 2 + self.y ** 2 + self.z ** 2), 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = list()\n",
+    "for i in range(4):\n",
+    "    a = list(map(float, input().split()))\n",
+    "    points.append(a)\n",
+    "\n",
+    "a, b, c, d = Points(*points[0]), Points(*points[1]), Points(*points[2]), Points(*points[3])\n",
+    "x = (b - a).cross(c - b)\n",
+    "y = (c - b).cross(d - c)\n",
+    "angle = math.acos(x.dot(y) / (x.absolute() * y.absolute()))\n",
+    "\n",
+    "print(\"%.2f\" % math.degrees(angle))"
+   ]
   }
  ],
  "metadata": {
@@ -529,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
