add problems from leetcode

--- a/Codility Practice Problems/05-prefix-sums/CountDiv.ipynb
+++ b/Codility Practice Problems/05-prefix-sums/CountDiv.ipynb
@@ -1,8 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: https://app.codility.com/programmers/lessons/5-prefix_sums/count_div/\n",
+    "\n",
+    "Solution: https://app.codility.com/demo/results/training3KVP3C-F95/\n",
+    "\n",
+    "Write a function:\n",
+    "\n",
+    "def solution(A, B, K)\n",
+    "\n",
+    "that, given three integers A, B and K, returns the number of integers within the range [A..B] that are divisible by K, i.e.:\n",
+    "\n",
+    "{ i : A ≤ i ≤ B, i mod K = 0 }\n",
+    "\n",
+    "For example, for A = 6, B = 11 and K = 2, your function should return 3, because there are three numbers divisible by 2 within the range [6..11], namely 6, 8 and 10.\n",
+    "\n",
+    "Write an efficient algorithm for the following assumptions:\n",
+    "\n",
+    "A and B are integers within the range [0..2,000,000,000];\n",
+    "K is an integer within the range [1..2,000,000,000];\n",
+    "A ≤ B."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +55,7 @@
        "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +76,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
